test create and update category with invalid values